--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -22,11 +22,12 @@ jobs:
         distribution: 'temurin'
         cache: gradle
 
+    # Error #2 solve: gradlew ko executable banaya ja raha hai
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
 
     - name: Build Debug APK
-      run: ./gradlew assembleDebug
+      run: ./gradlew assembleDebug # Agar JAR missing hua to ye step fail hoga (Error #1)
 
     - name: Upload Debug APK
       uses: actions/upload-artifact@v4
