--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -1,5 +1,3 @@
-# File: .github/workflows/android_build.yml
-
 name: Android CI
 
 on:
@@ -20,14 +18,12 @@ jobs:
       with:
         java-version: '17'
         distribution: 'temurin'
-        cache: gradle
 
-    # Error #2 solve: gradlew ko executable banaya ja raha hai
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-
-    - name: Build Debug APK
-      run: ./gradlew assembleDebug # Agar JAR missing hua to ye step fail hoga (Error #1)
+    # Humne chmod aur wrapper steps hata diye hain
+    
+    - name: Build Debug APK with Global Gradle
+      # Note: Hum './gradlew' nahi balki seedha 'gradle' use kar rahe hain
+      run: gradle assembleDebug --no-daemon
 
     - name: Upload Debug APK
       uses: actions/upload-artifact@v4
