--- a/build.gradle
+++ b/build.gradle
@@ -1,23 +1,21 @@
+// File: build.gradle (Root)
+
 buildscript {
     ext {
-        kotlin_version = "1.9.22" // Latest Stable Kotlin version
+        kotlin_version = "1.9.22"
     }
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:8.2.0" // Latest Stable Android Gradle Plugin
+        classpath "com.android.tools.build:gradle:8.2.0"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
-allprojects {
-    repositories {
-        google()
-        mavenCentral()
-    }
-}
+// NOTE: Humne yahan se 'allprojects' block hata diya hai 
+// kyunki wo settings.gradle mein handle ho raha hai.
 
 task clean(type: Delete) {
     delete rootProject.buildDir
