--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".RegisterActivity" />
+
     </application>
 
 </manifest>
+
