--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,8 +5,13 @@
     <application
         android:allowBackup="true"
         android:label="BasitShop"
+        
+        android:icon="@drawable/app_logo"
+        android:roundIcon="@drawable/app_logo"
+        
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        
+        android:theme="@style/Theme.MaterialComponents.Light.NoActionBar">
 
         <activity
             android:name=".LoginActivity"
