--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,13 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.basitshop">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:label="BasitShop"
-        
         android:icon="@drawable/app_icon"
         android:roundIcon="@drawable/app_icon"
-        
         android:supportsRtl="true"
         android:theme="@style/Theme.BasitShop">
 
