--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,23 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.basitshop">
 
-    <!-- ===== Permissions ===== -->
+    <!-- ===== CORE PERMISSION ===== -->
     <uses-permission android:name="android.permission.INTERNET" />
 
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-
-    <!-- Android 13+ -->
-    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
-
-    <!-- Legacy (safe limits) -->
-    <uses-permission
-        android:name="android.permission.READ_EXTERNAL_STORAGE"
-        android:maxSdkVersion="32" />
-
-    <uses-permission
-        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
-        android:maxSdkVersion="28" />
+    <!-- Storage / location permissions baad me,
+         jab feature actually use kare -->
 
     <application
         android:allowBackup="true"
@@ -28,33 +16,29 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BasitShop">
 
-        <!-- INTRO (LAUNCHER) -->
+        <!-- INTRO / SPLASH -->
         <activity
             android:name=".IntroActivity"
             android:exported="true"
-            android:theme="@style/Theme.BasitShop.NoActionBar"
-            android:screenOrientation="portrait">
+            android:theme="@style/Theme.BasitShop.NoActionBar">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
 
         <!-- LOGIN -->
         <activity
             android:name=".LoginActivity"
             android:exported="false"
-            android:theme="@style/Theme.BasitShop.NoActionBar"
-            android:screenOrientation="portrait" />
+            android:theme="@style/Theme.BasitShop.NoActionBar" />
 
         <!-- REGISTER -->
         <activity
             android:name=".RegisterActivity"
             android:exported="false"
-            android:theme="@style/Theme.BasitShop.NoActionBar"
-            android:screenOrientation="portrait" />
+            android:theme="@style/Theme.BasitShop.NoActionBar" />
 
     </application>
 
